finish big changes

--- a/element.html
+++ b/element.html
@@ -5,12 +5,23 @@
 	<style type="text/css">
 		h1{
 			color: red;
-		}		
+			background-color: #ffff00b5;
+		}
+
+		#Title{
+			color: blueviolet;
+			text-decoration: bold, underline;
+			font-weight: lighter;
+			padding: 50px;
+			font-size: 45px;
+			margin-right: 930px;
+
+		}	
 	</style>
 </head>
 <body>
 
-<h1> Heading 1-1 </h1>
+<h1 id="Title"> Heading 1-1 </h1>
 <h1> Heading 1-2 </h1>
 <h2> Heading 2-1 </h2>
 <h2> Heading 2-2 </h2>
